[tool.poetry]
name = "xerparser"
version = "0.2.11"
description = "Parse a P6 .xer file to a Python dictionary object."
authors = ["Jesse <code@seqmanagement.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["primavera", "p6", "xer", "schedule", "scheduling", "planning", "project management", "project controls"]
repository = "https://github.com/jjCode01/xerparser"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
