[tool.poetry]
name = "xerparser"
version = "0.5.8"
description = "Parse a P6 .xer file to a Python object."
authors = ["Jesse <code@seqmanagement.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["primavera", "p6", "xer", "schedule", "scheduling", "planning", "project management", "project controls"]
repository = "https://github.com/jjCode01/xerparser"

[tool.poetry.dependencies]
python = "^3.10"
html-sanitizer = "^1.9.3"

[tool.poetry.group.test.dependencies]
tqdm = "^4.64.1"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
test = 'scripts:test'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
