[tool.poetry]
name = "xerparser"
version = "0.13.3"
description = "Parse a P6 .xer file to a Python object."
authors = ["Jesse <code@seqmanagement.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["primavera", "p6", "xer", "schedule", "scheduling", "planning", "project management", "project controls"]
repository = "https://github.com/jjCode01/xerparser"

[tool.poetry.dependencies]
python = "^3.11"
html-sanitizer = "^2.2.0"

[tool.poetry.group.test.dependencies]
tqdm = "^4.64.1"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
test = 'scripts:test'
parse_test = 'scripts:parse_test'
calc_rem_hours_test = 'scripts:rem_hours_per_day_test'
test_task_rsrc_compare = 'scripts:test_task_rsrc_compare'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
